add folders and ar.html

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AR-projekt</title>
     <link rel="stylesheet" href="Assets/Css/Style.css" />
     <script src="Assets/JS/index.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Gruppe X – AR Navneskilte</h1>
+    <p>Vi har lavet en webapp, der bruger A-Frame og AR.js til at vise en personlig avatar, når et navneskilt genkendes.</p>
+    <a href="ar.html">Start AR-delen</a>
+  </body>
 </html>
