--- a/ar.html
+++ b/ar.html
@@ -9,22 +9,10 @@
   </head>
   <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
-      <!-- Person 1 -->
-      <a-marker type="pattern" url="patterns/pattern-Person-1.patt">
-        <a-entity gltf-model="models/Person-1.glb" scale="0.5 0.5 0.5"></a-entity>
-        <a-text value="Person-1" position="0 1 0"></a-text>
-      </a-marker>
-
-      <!-- Person 2 -->
-      <a-marker type="pattern" url="patterns/pattern-Person-2.patt">
-        <a-entity gltf-model="models/Person-2.glb" scale="0.5 0.5 0.5"></a-entity>
-        <a-text value="Person-2" position="0 1 0"></a-text>
-      </a-marker>
-
-      <!-- Person 3 -->
-      <a-marker type="pattern" url="patterns/pattern-Person-3.patt">
-        <a-entity gltf-model="models/Person-3.glb" scale="0.5 0.5 0.5"></a-entity>
-        <a-text value="Person-3" position="0 1 0"></a-text>
+      <!-- Sebastian -->
+      <a-marker type="pattern" url="assets/patterns/navneskilt1.patt">
+        <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
+        <a-text value="Sebastian" position="0 1 0"></a-text>
       </a-marker>
 
       <!-- Kamera -->
