--- a/ar.html
+++ b/ar.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR-projekt</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      a-scene {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs>
-      <!-- Sebastian -->
-      <a-marker type="pattern" url="Assets/patterns/pattern-patt-fil-test.patt">
-        <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
-        <a-text value="Sebastian" position="0 1 0"></a-text>
+  <body>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+      <!-- Marker til Sebastian -->
+      <a-marker type="pattern" url="assets/patterns/pattern-patt-fil-test.patt">
+        <a-entity gltf-model="assets/models/avatar.glb" position="0 0 0" rotation="0 180 0" scale="0.5 0.5 0.5"> </a-entity>
+        <a-text value="Sebastian" position="0 1 0" align="center" color="#FFFFFF"> </a-text>
       </a-marker>
 
       <!-- Kamera -->
