--- a/ar.html
+++ b/ar.html
@@ -7,15 +7,24 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
   </head>
-  <body style="margin: 0; overflow: hidden">
+  <!-- <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
-      <!-- Sebastian -->
+      Sebastian
       <a-marker type="pattern" url="Assets/patterns/pattern-patt-fil-test.patt">
         <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
         <a-text value="Sebastian" position="0 1 0"></a-text>
       </a-marker>
 
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body> -->
+  <body style="margin: 0; overflow: hidden">
+    <a-scene embedded arjs>
       <!-- Kamera -->
+      <a-marker preset="hiro">
+        <!-- Avatar 3D objekt -->
+        <a-box position="0 0.5 0" material="color: red;"></a-box>
+      </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
