--- a/ar.html
+++ b/ar.html
@@ -10,7 +10,7 @@
   <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
       <!-- Sebastian -->
-      <a-marker type="pattern" url="assets/patterns/marker.patt">
+      <a-marker type="pattern" url="assets/patterns/pattern-patt-fil-test.patt">
         <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
         <a-text value="Sebastian" position="0 1 0"></a-text>
       </a-marker>
