--- a/ar.html
+++ b/ar.html
@@ -9,8 +9,8 @@
   </head>
   <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
-      <!-- Sebastian -->
-      <a-marker type="pattern" url="assets/patterns/pattern-patt-fil-test.patt">
+      <!-- Marker med ny .patt-fil -->
+      <a-marker type="pattern" url="assets/patterns/generated_marker.patt">
         <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
         <a-text value="Sebastian" position="0 1 0"></a-text>
       </a-marker>
