--- a/ar.html
+++ b/ar.html
@@ -10,8 +10,8 @@
   <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
       <!-- Marker med ny .patt-fil -->
-      <a-marker type="pattern" url="assets/patterns/generated_marker.patt">
-        <a-entity gltf-model="assets/models/avatar.glb" scale="0.5 0.5 0.5"></a-entity>
+      <a-marker type="pattern" url="">
+        <a-entity gltf-model="" scale="0.5 0.5 0.5"></a-entity>
         <a-text value="Sebastian" position="0 1 0"></a-text>
       </a-marker>
 
