--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,7 @@
   </head>
   <body style="margin: 0; overflow: hidden">
     <a-scene embedded arjs>
-      <!-- Marker med ny .patt-fil -->
+      <!-- Sebastian -->
       <a-marker type="pattern" url="">
         <a-entity gltf-model="" scale="0.5 0.5 0.5"></a-entity>
         <a-text value="Sebastian" position="0 1 0"></a-text>
