--- a/ar.html
+++ b/ar.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR-projekt</title>
+    <!-- A-Frame og AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
+    <script src="https://rawcdn.githack.com/AR-js-org/AR.js/3.3.2/aframe/build/aframe-ar.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs>
-      <!-- Sebastian -->
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+      <!-- Marker til Sebastian -->
       <a-marker type="pattern" url="assets/patterns/marker.patt">
-        <a-entity gltf-model="assets/models/vodka.glb" scale="0.5 0.5 0.5"></a-entity>
-        <a-text value="Sebastian" position="0 1 0"></a-text>
+        <a-entity gltf-model="assets/models/vodka.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+        <a-text value="Sebastian" position="0 1 0" align="center" color="white"></a-text>
       </a-marker>
 
+      <!-- Kamera -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
