--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,7 @@
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
       <!-- Marker til Sebastian -->
       <a-marker type="pattern" url="assets/patterns/marker.patt">
-        <a-entity gltf-model="assets/models/vodka.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+        <a-entity gltf-model="assets/models/cube.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
         <a-text value="Sebastian" position="0 1 0" align="center" color="white"></a-text>
       </a-marker>
 
