--- a/ar.html
+++ b/ar.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR-projekt</title>
-    <!-- A-Frame og AR.js -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://rawcdn.githack.com/AR-js-org/AR.js/3.3.2/aframe/build/aframe-ar.min.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+    <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false;" vr-mode-ui="enabled: false">
       <!-- Marker til Sebastian -->
       <a-marker type="pattern" url="assets/patterns/marker.patt">
         <a-entity gltf-model="assets/models/cube.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
