--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
     <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType: webcam;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
       <!-- Marker til Sebastian -->
       <a-marker type="barcode" value="9">
-        <a-entity gltf-model="assets/models/cube/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+        <a-entity gltf-model="url(assets/models/cube/scene.gltf)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
         <a-text value="Sebastian" position="0 1 0" align="center" color="white"></a-text>
       </a-marker>
 
