--- a/ar.html
+++ b/ar.html
@@ -13,6 +13,7 @@
       <a-marker type="barcode" value="9">
         <a-entity gltf-model="url(assets/models/cube/scene.gltf)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
         <a-text value="Sebastian" position="0 1 0" align="center" color="white"></a-text>
+        <a-entity text="value: Sebastian; align: center; color: white;" position="0 1 0"></a-entity>
       </a-marker>
 
       <!-- Kamera -->
