--- a/ar.html
+++ b/ar.html
@@ -12,8 +12,7 @@
       <!-- Marker til Sebastian -->
       <a-marker type="barcode" value="9">
         <a-entity gltf-model="url(assets/models/cube/scene.gltf)" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
-        <a-text value="Sebastian" position="0 1 0" align="center" color="white"></a-text>
-        <a-entity text="value: Sebastian; align: center; color: white;" position="0 1 0"></a-entity>
+        <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
       </a-marker>
       <!-- Kamera -->
       <a-entity camera></a-entity>
