Hit 'Em Up  - 2pac

--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,7 @@
       <!-- Marker til Sebastian -->
       <a-marker type="barcode" value="9">
         <a-entity gltf-model="assets/models/vodka.glb" scale="10 10 10" position="0 0 0"></a-entity>
-        <!-- <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text> -->
+        <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
       </a-marker>
       <!-- Kamera -->
       <a-entity camera></a-entity>
