--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,8 @@
     <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType: webcam;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
       <!-- Marker til Sebastian -->
       <a-marker type="barcode" value="9">
-        <a-entity gltf-model="assets/models/vodka.glb" scale="10 10 10" position="0 0 0" align="center"></a-entity>
+        <!-- <a-entity gltf-model="assets/models/vodka.glb" scale="10 10 10" position="0 0 0" align="center"></a-entity> -->
+        <a-entity gltf-model="assets/models/model.gltf" scale="1 1 1" position="0 0 0"> </a-entity>
         <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
       </a-marker>
       <!-- Kamera -->
