--- a/ar.html
+++ b/ar.html
@@ -1,27 +1,21 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR.js Matrix Marker</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.loaders.min.js"></script>
+    <title>AR-projekt</title>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden">
-      <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5; ">
-      <a-assets>
-        <a-asset-item id="mymodel" src="assets/models/barka.glb"></a-asset-item>
-      </a-assets>
-
+    <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType: webcam;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
+      <!-- Marker til Sebastian -->
       <a-marker type="barcode" value="9">
-        <a-entity gltf-model="assets/models/barka.glb" scale="14 14 14" position="-10 -3 6" rotation="90 0 0"></a-entity>> </a-entity>
-      <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
+        <a-entity gltf-model="assets/models/barka.glb" scale="1 1 1" position="0 0 0" rotation="90 0 0"></a-entity>
+        <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
       </a-marker>
-
+      <!-- Kamera -->
       <a-entity camera></a-entity>
     </a-scene>
-    </body>
+  </body>
 </html>
