--- a/ar.html
+++ b/ar.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR-projekt</title>
+    <title>AR-NAVNESKILTE</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
-  <body style="margin: 0; overflow: hidden">
-    <a-scene vr-mode-ui="enabled: false;" embedded arjs="sourceType: webcam;debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
-      <!-- Marker til Sebastian -->
+  <body>
+    <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
+      <a-assets>
+        <a-asset-item id="tower" src="./assets/models/kickelhahn_tower/scene.gltf"></a-asset-item>
+      </a-assets>
       <a-marker type="barcode" value="9">
-        <a-entity gltf-model="assets/models/kickelhahn_tower/scene.gltf" scale="0.25 0.25 0.25" position="0 0 0"></a-entity>
-        <a-text value="Sebastian" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
+        <a-entity gltf-model="#tower" position="0 0.1 0" scale="0.2 0.2 0.2"></a-entity>
+        <a-entity text="value: Sebastian; align: center;" position="0 0.2 1" scale="4 4 4" rotation="-90 0 0"></a-entity>
       </a-marker>
-      <!-- Kamera -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
