--- a/ar.html
+++ b/ar.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
       <a-assets>
-        <a-asset-item id="tower" src="./assets/models/kickelhahn_tower/scene.gltf"></a-asset-item>
+        <a-asset-item id="tower" src="assets/models/kickelhahn_tower/scene.gltf"></a-asset-item>
       </a-assets>
       <a-marker type="barcode" value="9">
         <a-entity gltf-model="#tower" position="0 0.1 0" scale="0.2 0.2 0.2"></a-entity>
